syntax = "proto3";

package zanzi;

import "google/protobuf/timestamp.proto";

option go_package = "./types";

// Identifies a system entity
message Entity {
    string namespace = 1;
    string id = 2;
}

// RelationshipType enumerates the different possible relation types
enum RelationshipType {
    // Represents a relation from an ACTORSET to an OBJECT node.
    // used to express some relation between the source object and target object.
    ATTRIBUTE = 0;

    // Represents a relation grant between an ACTORSET and an ACTOR node
    // Effectively sets a relation between source object and dest actor
    GRANT = 1;

    // Represents a delegated relation between two ACTORSET nodes.
    // Delegation is used to build indirect relations between users
    DELEGATE = 2;

}

// Relationship is a container type for any relation.
// Embeds client application data.
message Relationship {
    string policy_id = 1;
    RelationshipType type = 2;
    Entity object = 3;
    string relation = 4;
    Entity actor = 5;
    // may be empty for different rel types
    string actor_relation = 6; 
    google.protobuf.Timestamp created_at = 7;
    map<string, string> metadata = 10;
}
